Add styles and scripts for various components in the student portal
- Implemented CSS for admin account management, courses selection, general layout, login, registered courses, student dashboard, and update information.
- Added JavaScript functionality for dropdown selection, account management buttons, course registration modal, password validation, and dynamic content display.
- Created HTML templates for activation failure and setting a new password, ensuring proper structure and linking to relevant styles and scripts.

--- a/template/admin/manager.html
+++ b/template/admin/manager.html
@@ -8,15 +8,19 @@
 <body>
     <input type="text" name="" id="email">
     <input type="button" value="send" id="send">
+    {% csrf_token %}
     <script>
         const sendBtn= document.getElementById("send");
-        const apiUrl= 'http://127.0.0.1:8000/apis/v1/create-student';
+        const address= 'http://172.20.10.3:8000/'
+        const apiUrl= `${address}/apis/v1/create-student`;
 
         sendBtn.addEventListener("click", () => {
             const email= document.getElementById("email");
+            const csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
             let formData= new FormData();
 
             formData.append("email", email.value)
+            formData.append("csrfmiddlewaretoken", csrfToken);
             fetch(apiUrl,{
                 method: 'POST',
                 body: formData,
