--- a/template/admin/manager.html
+++ b/template/admin/manager.html
@@ -11,8 +11,8 @@
     {% csrf_token %}
     <script>
         const sendBtn= document.getElementById("send");
-        const address= 'http://172.20.10.3:8000/'
-        const apiUrl= `${address}/apis/v1/create-student`;
+        const address= 'http://127.0.0.1:8000'
+        const apiUrl= `${address}/apis/v1/create-student/`;
 
         sendBtn.addEventListener("click", () => {
             const email= document.getElementById("email");
