Refactor URLs in JavaScript and HTML files to use relative paths; update student creation logic to ensure unique index numbers.

--- a/template/admin/manager.html
+++ b/template/admin/manager.html
@@ -12,7 +12,7 @@
     <script>
         const sendBtn= document.getElementById("send");
         const address= 'http://127.0.0.1:8000'
-        const apiUrl= `${address}/apis/v1/create-student/`;
+        const apiUrl= `/apis/v1/create-student/`;
 
         sendBtn.addEventListener("click", () => {
             const email= document.getElementById("email");
