--- a/template/students/updateInfo.html
+++ b/template/students/updateInfo.html
@@ -25,12 +25,17 @@
             <input type="text" name="indexNumber" placeholder="Index Number" id="student-indexNumber">
             <input type="text" name="telephone" placeholder="Telephone Number" id="student-telephone">
             <input type="text" name="program" placeholder="Program" id="student-program" list="programs">
-             <datalist id="programs">
-                {% for program in studentsPrograms %}
-                    <option value="{{program.name}}">
-                {% endfor %}
-             </datalist>
-            <input type="text" name="level" placeholder="Level" id="student-level">
+            <input type="text" name="level" placeholder="Level" id="student-level" list="levels">
+            <datalist id="programs">
+               {% for program in studentsPrograms %}
+                   <option value="{{program.name}}">
+               {% endfor %}
+            </datalist>
+            <datalist id="levels">
+               {% for level in studentsLevels %}
+                   <option value="{{level.name}}">
+               {% endfor %}
+            </datalist>
             
         </div>
         <div class="auth-btn">
