`Added new API endpoints for student course registration and retrieval of registered courses, updated views and templates to accommodate these changes, and modified JavaScript files to interact with the new endpoints.`

--- a/template/students/courses-select.html
+++ b/template/students/courses-select.html
@@ -35,8 +35,8 @@
         </div>
         <input type="button" value="Register" id="btnRegister">
         <div class="lower-info">
-            <p>Courses Selected: 0</p>
-            <p>Total Credit Hours: 0</p>
+            <p id="couuse-select">Courses Selected: 0</p>
+            <p id="tcrh">Total Credit Hours: 0</p>
         </div>
     </main>
     <div class="modal">
