`Added link to view registered courses in academics template`

--- a/template/students/academics.html
+++ b/template/students/academics.html
@@ -41,6 +41,9 @@
                     <a href="{% url 'students-academics-course-registration' %}">
                         <p>Course registration</p>
                     </a>
+                    <a href="{% url 'students-academics-registered-courses' %}">
+                        <p>View Registered Courses</p>
+                    </a>
                     <p>Resit registration</p>
                 </div>
             </div>
