Implement settings update functionality and enhance settings retrieval in the admin manager

--- a/template/admin/manager.html
+++ b/template/admin/manager.html
@@ -204,6 +204,7 @@
       <div class="settings">
         <h2>Settings</h2>
         <div class="semester-settings">
+          <input type="hidden" name="settingsID" id="settingsID" />
           <h4>Semester</h4>
           <input type="radio" name="semester" id="ss1" value="1" disabled />
           <label for="ss1">1</label>
@@ -224,7 +225,7 @@
         </div>
       </div>
       <div class="academic-y">
-        <p>Academic year: 2025</p>
+        <p></p>
         <div class="actions">
           <input
             type="button"
